# hass-aarhus-waste

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cardconfig.yaml  get_kvhx.py  pyproject.toml  sensor.yaml
custom_components/aarhuswaste/: __init__.py  config_flow.py  coordinator.py  domain.py  manifest.json  model.py  sensor.py
custom_components/dkwaste/: __init__.py  sensor.py
tests/: test_parse_response.py
