[tool.poetry]
name = "hass-aarhus-waste"
version = "0.1.0"
description = ""
authors = ["kvedes"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13.2,<4.0"
homeassistant = "^2025.8.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
